components/layout/header/MainMenu.module.scss
.mainMenuWrapper{

    display: flex;
    justify-content: center;
    align-items: center;
    margin: 20px;
    overflow-x: auto;
    scroll-behavior: smooth;
    width: 100%;
    

    // .mainMenu{
    //     width: 420px;
    // }
}



@media (max-width:767px){
    .leftMenu{
        width: auto;
    }
}

@media (max-width:550px){
    .mainMenuWrapper{
        justify-content: start;
    }
}

